--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,7 +18,6 @@
 }
 .body {
     background: #fff;
-    
     color: #3c3c3c;
     font: 700 17px/20px sans-serif;
     -moz-osx-font-smoothing: grayscale;
@@ -26,7 +25,7 @@
 }
 
 a {
-        text-decoration: none;
+    text-decoration: none;
 }
 ul {
     list-style: none;
@@ -45,5 +44,6 @@ body {
     -webkit-font-smoothing: antialiased;
 }
 textarea {
-        overflow: auto;
+    overflow: auto;
+    outline: none;
 }
