--- a/app/assets/stylesheets/markMeaning.css
+++ b/app/assets/stylesheets/markMeaning.css
@@ -51,6 +51,22 @@
         flex-shrink: 0;
     float: left;
 }
+
+.m-m-label:hover{
+    color: #1cb0f6;
+    border-color: #1bb0f6;
+    background-color: #ddf4ff;
+
+}
+.m-m-label:hover .m-m-number {
+    border-color: #1cb0f6;
+    color: #1caff6;
+}
+.m-m-label:after {
+    color: #1cb0f6;
+    border-color: #1bb0f6;
+    background-color: #ddf4ff;
+}
 .m-m-input {
         position: absolute;
     visibility: hidden;
