shrink  max width of skill header content frame

--- a/app/assets/stylesheets/markMeaning.css
+++ b/app/assets/stylesheets/markMeaning.css
@@ -56,6 +56,7 @@
     color: #1cb0f6;
     border-color: #1bb0f6;
     background-color: #ddf4ff;
+    cursor: pointer;
 
 }
 .m-m-label:hover .m-m-number {
