html and css for add new course styling

--- a/app/assets/stylesheets/dashboard.css
+++ b/app/assets/stylesheets/dashboard.css
@@ -207,3 +207,48 @@
     width: 100%;
 }
 
+/* FLAG DROP DOWN */
+
+.flag-container-list {
+    z-index: 220;
+    left: 50%;
+    top: calc(100% + 10px - 2px);
+    transform: translateX(-50%);
+    border: 2px solid #e5e5e5;
+    border-radius: 15px; 
+    min-height: 50px;
+    min-width: 50px; 
+    overflow: hidden;
+    padding: 0;
+    background-color: #fff;
+    box-sizing: border-box;
+    position: absolute;
+}
+
+.flag-box-sizer {
+    max-height: 304px;
+    overflow-y: auto;
+    width: 240px;
+}
+.flag-language-box{
+    /* background-color: #ddf4ff; */
+    align-items: center; 
+    display: flex;
+    flex-direction: row;
+    border-bottom: 2px solid #e5e5e5;
+    color: #4b4b4b;
+    cursor: pointer;
+    font-weight: 700;
+    padding: 8px 12px;
+}
+.flag-language-box:first-child {
+    background-color: #ddf4ff;
+
+}
+.flag-language-box-t-span {
+    padding-left: 5px;
+}
+.add-n-c {
+    color: #afafaf;
+    font-size: 17px;
+}
