--- a/app/assets/stylesheets/dashboard.css
+++ b/app/assets/stylesheets/dashboard.css
@@ -299,7 +299,7 @@
     color: #4b4b4b;
     cursor: pointer;
     font-weight: 700;
-    padding: 8px 12px;
+    /* padding: 8px 12px; */
 }
 .db-option-span { 
     border-top: solid 2px #e5e5e5;
@@ -313,10 +313,15 @@
     display: flex;
     flex-direction: row;
     font-size: 15px;
+    padding-left: 24px;
+}
+.db-option-span:hover {
+    background-color: #f7f7f7;
 
 }
+
 .db-profile-header-div {
-    padding: 12px 12px 12px 0px;
+    padding: 12px 12px 12px 24px;
     font-size: 20px;
     font-weight: 700px;
     color: #4b4b4b;
