login button in courses renders conditionally

--- a/app/assets/stylesheets/splash.css
+++ b/app/assets/stylesheets/splash.css
@@ -118,7 +118,9 @@
     width: 100%;
     align-items: center;
     min-height: 90vh;
+    /* height: calc(100vh - 70px); */
     position: relative;
+
     z-index: 1;
 }
 
