--- a/app/assets/stylesheets/markMeaning.css
+++ b/app/assets/stylesheets/markMeaning.css
@@ -66,24 +66,19 @@
     color: #1caff6;
 }
 
-/* .m-m-radios:checked .m-m-label {
-    color: #1cb0f6;
-    border-color: #1bb0f6;
-    background-color: #ddf4ff;
-
-} */
-
  /* .m-m-label input[type="radio"]:checked {
     color: #1cb0f6;
     border-color: #1bb0f6;
     background-color: #ddf4ff;
 } */
-/* .radio-selected {
+
+/* THIS IS THE CLOSEST I CAN GET 7/9 */
+/* input[type="radio"]:checked, .m-m-label{
     color: #1cb0f6;
     border-color: #1bb0f6;
     background-color: #ddf4ff;
-
 } */
+
 .m-m-input {
         position: absolute;
     visibility: hidden;
