edit migration (eep) in add_to_user_table to get rid of :object (doesn't exit and throws an error) into :integer

--- a/app/assets/stylesheets/markMeaning.css
+++ b/app/assets/stylesheets/markMeaning.css
@@ -73,11 +73,28 @@
 } */
 
 /* THIS IS THE CLOSEST I CAN GET 7/9 */
-/* input[type="radio"]:checked, .m-m-label{
+/* input[type="radio"]:checked~m-m-label{
     color: #1cb0f6;
     border-color: #1bb0f6;
     background-color: #ddf4ff;
 } */
+.m-m-label:focus {
+     color: #1cb0f6;
+    border-color: #1bb0f6;
+    background-color: #ddf4ff;
+}
+
+.checked {
+    color: #1cb0f6;
+    border-color: #1bb0f6;
+    background-color: #ddf4ff;
+}
+
+.m-m-label[type="radio"][checked] {
+    color: #1cb0f6;
+    border-color: #1bb0f6;
+    background-color: #ddf4ff;
+}
 
 .m-m-input {
         position: absolute;
