--- a/app/assets/stylesheets/constructSentence.css
+++ b/app/assets/stylesheets/constructSentence.css
@@ -22,6 +22,7 @@
 }
 .construct-sentence-top-half {
     position: relative;
+    border-bottom: solid 2px #e5e5e5;
 }
 .c-s-t-h-section {
     height: 100%;
@@ -77,7 +78,7 @@
     border-style: solid;
     border-width: 2px 2px 4px;
         background: none;
-    border-color: transparent;
+    border-color: #e5e5e5;
     color: #4b4b4b;
     cursor: pointer;
     font-weight: 500;
