remove splash footer on media query screen size 500

--- a/app/assets/stylesheets/splash.css
+++ b/app/assets/stylesheets/splash.css
@@ -240,6 +240,10 @@
     }
     .slogan-text-box {
         margin-top: 7%;
+        margin: auto;
+    }
+    .footer-nav {
+        display: none;
     }
 }
 /* @media (min-width: 700px)
