--- a/app/assets/stylesheets/translate.css
+++ b/app/assets/stylesheets/translate.css
@@ -6,6 +6,28 @@
     display: inline;
     margin: 2px;
 }
-.translate-spacer {
-    width: 3px;
+.translate-div-container {
+    display: none;
+    left: 50%;
+    position: absolute;
+    top: calc(100% + 15px);
+    -ms-transform: translateX(-50%);
+    transform: translateX(-50%);
+    z-index: 150;
+}
+.translate-div-content {
+    color: #3c3c3c;
+    font-weight: 500;
+    white-space: nowrap;
+    background: #fff;
+    position: relative;
+    border: 2px solid #e5e5e5;
+    border-radius: 16px;
+    width: 50px;
+    padding-left: 5px;
+    padding-right: 5px;
+    text-align: center;
+}
+.translate-word:hover .translate-div-container {
+    display: block;
 }
