CSS perfectly sizes to word bubcontainer

--- a/app/assets/stylesheets/translate.css
+++ b/app/assets/stylesheets/translate.css
@@ -26,6 +26,7 @@
     width: 50px;
     padding: 7px;
     text-align: center;
+    width: 100%;
 }
 .translate-word:hover .translate-div-container {
     display: block;
