--- a/app/assets/stylesheets/lesson.css
+++ b/app/assets/stylesheets/lesson.css
@@ -15,6 +15,8 @@
     height: 100%;
     min-height: 590px;
     padding: 0;
+    display: flex;
+    flex-direction: column;
 }
 .skill-header-container {
     z-index: 200;
@@ -88,10 +90,11 @@
     /*************** using vh!!!! **************/
     width: 100%;
     opacity: 1;
+    flex: 1;
 }
 .s-l-b-box {
     display: flex;
-    height: calc(100vh - 232px);
+    /* height: calc(100vh - 232px); */
 }
 
 .challenge {
